--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,12 @@
   font-family: "Roboto", sans-serif;
   box-sizing: border-box;
 }
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
